crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: expected square brackets
  --> tests/constraints/invalid_seeds_syntax.fail.rs:23:17
   |
23 |         seeds = &[&args.admin],
   |                 ^
